--- a/style.css
+++ b/style.css
@@ -1,77 +1,91 @@
 button {
-  border-radius: 4px;
-  border: none;
-  padding: 6px 22px;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.6;
-  color: rgb(159, 39, 189);
-  background-color: wheat;
-  cursor: pointer;
-  font-family: inherit;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    border-radius: 4px;
+    border: none;
+    padding: 6px 22px;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.6;
+    color: rgb(159, 39, 189);
+    background-color: wheat;
+    cursor: pointer;
+    font-family: inherit;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .btn-add {
-  margin-right: 5px;
+    margin-right: 5px;
 }
 .btn-add:hover,
 .btn-add:focus {
-  box-shadow: 5px 5px 5px rgba(58, 173, 74, 0.1),
-    5px 5px 5px rgba(110, 184, 50, 0.08), 5px 5px 5px rgba(84, 206, 73, 0.12);
-  color: rgb(74, 62, 180);
-  background-color: greenyellow;
+    box-shadow: 5px 5px 5px rgba(58, 173, 74, 0.1),
+        5px 5px 5px rgba(110, 184, 50, 0.08),
+        5px 5px 5px rgba(84, 206, 73, 0.12);
+    color: rgb(74, 62, 180);
+    background-color: greenyellow;
 }
 
 .btn-remove:hover,
 .btn-remove:focus {
-  box-shadow: 5px 5px 5px rgba(173, 58, 58, 0.1),
-    5px 5px 5px rgba(184, 50, 57, 0.08), 5px 5px 5px rgba(206, 73, 95, 0.12);
-  color: rgb(74, 62, 180);
-  background-color: rgb(255, 47, 92);
+    box-shadow: 5px 5px 5px rgba(173, 58, 58, 0.1),
+        5px 5px 5px rgba(184, 50, 57, 0.08), 5px 5px 5px rgba(206, 73, 95, 0.12);
+    color: rgb(74, 62, 180);
+    background-color: rgb(255, 47, 92);
 }
 
 ul {
-  margin: 0;
-  padding: 0;
-  margin-top: 20px;
+    margin: 0;
+    padding: 0;
+    margin-top: 20px;
 }
 
 li {
-  width: 200px;
-  padding: 15px 0;
-  text-align: center;
+    width: 200px;
+    padding: 15px 0;
+    text-align: center;
 }
 
 .even {
-  background-color: red;
-  color: blueviolet;
+    background-color: red;
+    color: blueviolet;
 }
 
 .odd {
-  background-color: blueviolet;
-  color: red;
+    background-color: blueviolet;
+    color: red;
 }
 
 #sea {
-  width: 300px;
-  height: 200px;
-  border: 10px solid black;
-  background-color: aqua;
-  position: relative;
-  overflow: hidden;
-  cursor: pointer;
-  color: white;
+    width: 1240px;
+    height: 400px;
+    border: 10px solid black;
+    background-color: aqua;
+    background: url("./img/more.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+    color: white;
 }
 
 #ship {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 40px;
-  height: 40px;
-  transition: all 1s;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 80px;
+    height: 80px;
+    transition: all 1s;
+}
+
+#boat {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100px;
+    height: 100px;
+    transition: all 1s;
 }
