--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ button {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.6;
-    color: rgb(159, 39, 189);
+    color: rgb(150, 8, 185);
     background-color: wheat;
     cursor: pointer;
     font-family: inherit;
@@ -59,10 +59,11 @@ li {
 
 #sea {
     width: 1240px;
-    height: 400px;
+    height: 540px;
     border: 10px solid black;
-    background-color: aqua;
-    background: url("./img/more.jpg");
+    /* background-color: aqua; */
+    /* background: url("./img/more.jpg"); */
+    background: url("./img/space.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -73,15 +74,6 @@ li {
 }
 
 #ship {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 80px;
-    height: 80px;
-    transition: all 1s;
-}
-
-#boat {
     position: absolute;
     left: 0;
     top: 0;
