--- a/style.css
+++ b/style.css
@@ -62,8 +62,8 @@ li {
     height: 540px;
     border: 10px solid black;
     /* background-color: aqua; */
-    /* background: url("./img/more.jpg"); */
-    background: url("./img/space.jpg");
+    background: url("./img/more.jpg");
+    /* background: url("./img/space.jpg"); */
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
